syntax = "proto3";

package productpackage;

service Product {
  rpc GetProduct(ProductRequest) returns(ProductResponse) {};
}

message ProductRequest{
  string id = 1; 
}

message ProductResponse{
  string id = 1;
  string name = 2;
  optional int32 price = 3;
  string description = 4;
  string category = 5;
  string image = 6;
}